# paraphernalia

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Justfile  README.md  api.html  commands.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  test.yml
_modules/: index.html  paraphernalia.html
_modules/paraphernalia/: _project.html  _random.html  _settings.html  colors.html  glsl.html  jupyter.html  review.html  signature.html  torch.html  utils.html
_modules/paraphernalia/torch/: clip.html  dall_e.html  direct.html  generator.html  lightning.html  modules.html  noise.html  siren.html  taming.html
_sources/: installation.rst.txt
docs/source/: commands.rst  conf.py  index.rst  installation.rst  modules.rst  paraphernalia.rst  paraphernalia.torch.direct.rst  paraphernalia.torch.lightning.rst  paraphernalia.torch.rst  paraphernalia.torch.siren.rst
paraphernalia/: __init__.py  _project.py  _random.py  _settings.py  colors.py  glsl.py  jupyter.py  render.py  review.py  signature.py  torch.py  utils.py
paraphernalia/torch/: __init__.py  clip.py  criticsystem.py  dall_e.py  direct.py  generator.py  lightning.py  modules.py  noise.py  siren.py  taming.py
tests/: __init__.py  test_clip.py  test_dall_e.py  test_generators.py  test_glsl.py  test_paraphernalia.py  test_project.py  test_random.py  test_settings.py  test_signature.py  test_taming.py  test_torch.py  test_torch_generators.py  test_torch_modules.py  test_torch_noise.py  test_utils.py
