[tool.poetry]
name = "paraphernalia"
version = "0.1.1"
description = "A collection of tools for making art"
authors = ["Joe Halliwell <joe.halliwell@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/joehalliwell/paraphernalia"
repository = "https://github.com/joehalliwell/paraphernalia"
keywords = ["art", "torch", "glsl"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.7"
moderngl = "^5.6.4"
moderngl-window = "^2.3.0"
click = "^7.1.2"
pyrr = "^0.10.3"
tqdm = "^4.59.0"
imageio = "^2.9.0"
imageio-ffmpeg = "^0.4.3"
torch = "^1.7.1"
torchvision = "^0.8.2"
xdg = "^5.1.0"
einops = "^0.3.0"
colour = "^0.1.5"
dall-e = {git = "https://github.com/openai/DALL-E.git", optional = true}
clip = {git = "https://github.com/openai/CLIP.git", rev = "main", optional = true}
regex = {version = "^2021.7.1", optional = true}
ftfy = {version = "^6.0.3", optional = true}
importlib-metadata = {version = "^1.0", python= "<3.8"}
ipython = "^7.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^20.8b1"
ipykernel = "^5.5.5"
pre-commit = "^2.13.0"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.extras]
openai = ["regex", "ftfy", "clip", "dall-e"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
render='paraphernalia.glsl:render'
preview='paraphernalia.glsl:preview'
