[tool.poetry]
name = "paraphernalia"
version = "0.2.0"
description = "A collection of tools for making art"
authors = ["Joe Halliwell <joe.halliwell@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/joehalliwell/paraphernalia"
repository = "https://github.com/joehalliwell/paraphernalia"
keywords = ["art", "torch", "glsl"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.7"
moderngl = "^5.6.4"
moderngl-window = {git = "https://github.com/moderngl/moderngl-window.git"}
click = "^7.1.2"
pyrr = "^0.10.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
tqdm = "^4.59.0"
imageio = "^2.9.0"
imageio-ffmpeg = "^0.4.3"
torch = "^1.7.1"
torchtext = "^0.8.0" # HACK: Force downgrade for Colab
torchvision = "^0.8.2"
xdg = "^5.1.0"
einops = "^0.3.0"
importlib-metadata = {version = "^1.0", python= "<3.8"}
ipython = "^7.25.0"
pytorch-lightning = "1.5.0rc0"
python-xmp-toolkit = "^2.0.1"
dall-e = {git = "https://github.com/openai/DALL-E.git", optional = true}
clip = {git = "https://github.com/openai/CLIP.git", rev = "main", optional = true}
regex = {version = "^2021.7.1", optional = true}
ftfy = {version = "^6.0.3", optional = true}
taming-transformers = {git = "https://github.com/joehalliwell/taming-transformers.git", optional=true}
omegaconf = {version = "^2.1.0", optional = true}
rich = {version = "^10.15.2", optional = true}
sphinx = {version="4.2.0", optional=true} # Pinned for theme compatibility
pydata-sphinx-theme = {version = "^0.7.1", optional = true}
sphinx-click = {version = "^3.0.1", optional = true}
autodoc-pydantic = {version="^1.5.1", optional=true}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
ipykernel = "^5.5.5"
pre-commit = "^2.13.0"
isort = "^5.8.0"
black = "^20.8b1"
flake8 = "^4.0.1"
interrogate = "^1.4.0"
docformatter = "^1.4"

[tool.poetry.extras]
openai = ["regex", "ftfy", "clip", "dall-e"]
taming = ["taming-transformers", "omegaconf", "pytorch-lightning"]
docs = ["sphinx", "pydata-sphinx-theme", "sphinx-click", "autodoc-pydantic"]
rich = ["rich"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
render='paraphernalia.glsl:render'
preview='paraphernalia.glsl:preview'
sign='paraphernalia.signature:sign'
review='paraphernalia.review:review'

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = true
ignore-private = false
ignore-property-decorators = false
ignore-setters = true
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
fail-under = 90
exclude = ["setup.py", "docs", "build", "tests", "scratch"]
ignore-regex = ["^forward$", "^training_step$"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.isort]
profile = "black"
